# hash-generator

./: Cargo.toml
src/: countries.rs  crypto.rs  enums.rs  main.rs  models.rs
