[package]
name = "hash-generator"
version = "0.1.0"
description = "A Rust Console App"
authors = ["Hussein Dossoki"]
license = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
console = "0.15.2"
sha2 = "0.10"